Bugfix: jumping content with modal dialogs

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -136,5 +136,6 @@
 	html {
 		@apply font-sans;
 		overflow-y: scroll;
+		scrollbar-gutter: stable;
 	}
 }
